trying to add user info and integrate mongodb

--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "rollup -c && node backend.js"
+    "start": "rollup -c && nodemon backend.js"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "nodemon": "^2.0.7",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -18,8 +19,10 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongodb": "^3.6.9",
     "sirv-cli": "^1.0.0",
     "socket.io": "^4.1.2"
   }
